--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-data-grid": "^6.19.6",
+    "@mui/x-data-grid-generator": "^6.19.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.6.7",
     "react": "^18.2.0",
